swagger get one post
